This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix miscellaneous issues in error handling
Type: behavior Stage: resolved
Components: Extension Modules, Interpreter Core Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: cstratak, miss-islington, ned.deily, serhiy.storchaka, vstinner
Priority: normal Keywords: patch

Created on 2018-12-10 12:30 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 11077 merged serhiy.storchaka, 2018-12-10 12:32
PR 11105 merged miss-islington, 2018-12-11 06:38
PR 11106 merged serhiy.storchaka, 2018-12-11 06:45
Messages (7)
msg331504 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-12-10 12:30
The proposed patch fixes miscellaneous issues in error handling.
msg331505 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-12-10 12:34
This is an extraction from my larger patch. These changes fix real bugs and should be backported.
msg331549 - (view) Author: Charalampos Stratakis (cstratak) * Date: 2018-12-10 23:49
Maybe a release blocker for 3.7.2 and 3.6.8?
msg331550 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-12-10 23:53
No. It is very hard to reproduce these errors.
msg331585 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-12-11 06:38
New changeset 8905fcc85a6fc3ac394bc89b0bbf40897e9497a6 by Serhiy Storchaka in branch 'master':
bpo-35454: Fix miscellaneous minor issues in error handling. (#11077)
https://github.com/python/cpython/commit/8905fcc85a6fc3ac394bc89b0bbf40897e9497a6
msg331589 - (view) Author: miss-islington (miss-islington) Date: 2018-12-11 07:05
New changeset 62674f3a36ec55f86a5f20ee028a37fbd549bd6c by Miss Islington (bot) in branch '3.7':
bpo-35454: Fix miscellaneous minor issues in error handling. (GH-11077)
https://github.com/python/cpython/commit/62674f3a36ec55f86a5f20ee028a37fbd549bd6c
msg331591 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-12-11 07:27
New changeset 8855d9339858683c9b4fcd50b02a7bca526d4726 by Serhiy Storchaka in branch '3.6':
[3.6] bpo-35454: Fix miscellaneous minor issues in error handling. (GH-11077) (GH-11106)
https://github.com/python/cpython/commit/8855d9339858683c9b4fcd50b02a7bca526d4726
History
Date User Action Args
2022-04-11 14:59:09adminsetgithub: 79635
2018-12-11 10:16:26serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-12-11 07:27:54serhiy.storchakasetmessages: + msg331591
2018-12-11 07:05:16miss-islingtonsetnosy: + miss-islington
messages: + msg331589
2018-12-11 06:45:49serhiy.storchakasetpull_requests: + pull_request10335
2018-12-11 06:38:14miss-islingtonsetpull_requests: + pull_request10334
2018-12-11 06:38:05serhiy.storchakasetmessages: + msg331585
2018-12-10 23:53:22serhiy.storchakasetmessages: + msg331550
2018-12-10 23:49:33cstrataksetnosy: + ned.deily, cstratak
messages: + msg331549
2018-12-10 12:34:37serhiy.storchakasetmessages: + msg331505
2018-12-10 12:32:34serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request10311
2018-12-10 12:30:05serhiy.storchakacreate