[3.6] bpo-35454: Fix miscellaneous minor issues in error handling. (GH-11077)

* bpo-35454: Fix miscellaneous minor issues in error handling.

* Fix a null pointer dereference..
(cherry picked from commit 8905fcc85a6fc3ac394bc89b0bbf40897e9497a6)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>